--- a/question 2.html
+++ b/question 2.html
@@ -13,7 +13,7 @@
 <body>
 	<br><br><br><br><br>
 <div class="container text-dark bg-light"><br><br>
-    <center><h1>Question One</h1></center><br><br>
+    <center><h1>Question Two</h1></center><br><br>
     <center><div style="font-size: 30px;">Who developed JavaScript?</div></center><br><br><br>
     <center><a href="wrong.html" style="margin-right: 15px;"><button type="button" class="btn btn-primary btn-lg">Notch</button></a> 
     <a href="wrong.html" style="margin-right: 15px;"><button type="button" class="btn btn-primary btn-lg">Joshua Ortiz</button></a>
