--- a/question 3.html
+++ b/question 3.html
@@ -13,7 +13,7 @@
 <body>
 	<br><br><br><br><br>
 <div class="container text-dark bg-light"><br><br>
-    <center><h1>Question One</h1></center><br><br>
+    <center><h1>Question Three</h1></center><br><br>
     <center><div style="font-size: 30px;">When did JavaScript became an ECMA standard?</div></center><br><br><br>
     <center><a href="wrong.html" style="margin-right: 15px;"><button type="button" class="btn btn-primary btn-lg">1989</button></a> 
     <a href="question 4.html" style="margin-right: 15px;"><button type="button" class="btn btn-primary btn-lg">1997</button></a>
