--- a/question 4.html
+++ b/question 4.html
@@ -13,7 +13,7 @@
 <body>
 	<br><br><br><br><br>
 <div class="container text-dark bg-light"><br><br>
-    <center><h1>Question One</h1></center><br><br>
+    <center><h1>Question Four</h1></center><br><br>
     <center><div style="font-size: 30px;">Who founded Netscape?</div></center><br><br><br>
     <center><a href="question 5.html" style="margin-right: 15px;"><button type="button" class="btn btn-primary btn-lg">Marc Andreesen</button></a> 
     <a href="wrong.html"  style="margin-right: 15px;"><button type="button" class="btn btn-primary btn-lg">Marc Anderson</button></a>
